# keepass-cli

./: .gitignore  README.md  pyproject.toml
src/keepass_cli/: cli.py  comparator.py  connector.py  datastructures.py  utils.py
tests/: conftest.py  test_cli.py  test_comparator.py  test_connector.py
